sezon-1/5-ingress/fussy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  name: fussy
spec:
  rules:
  - host: fussy-app.192.168.99.100.nip.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: fussy
            port:
              number: 80
